Align checkboxes, fix image resizing, adapt action buttons and filters for mobile

--- a/public/stylesheets/cardsListStyle.css
+++ b/public/stylesheets/cardsListStyle.css
@@ -1,7 +1,7 @@
 .img-max {
   max-width: 128px;
   width:100%;
-  transition: all .5s ease;
+  /*transition: all .5s ease;*/ /*Set by JQuery after the page loads to prvent resizing*/
 }
 .sticky-offset {
     top: 70px;
@@ -21,4 +21,28 @@
 .notSelectedCard {
   width: 80% !important;
   filter: opacity(50%);
+}
+@media screen and (max-width: 992px) {
+  .d-flex button {
+    margin-bottom: 10px;
+  }
+  .md-position-buttons {
+    position: absolute;
+    z-index: 1;
+    width: 15rem;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto;
+    top: 4rem;
+  }
+  .mobile-card {
+    background-color: rgba(255, 255, 255, 0) !important;
+    box-shadow: none !important;
+  }
+  .img-max {
+    max-width: 100px;
+    width:100%;
+    /*transition: all .5s ease;*/ /*Set by JQuery after the page loads to prvent resizing*/
+  }
 }
