--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,9 +9,6 @@
 .card-header {
   border: 0px;
 }
-#nameFilter {
-  border: 0px;
-}
 
 /*HEADER*/
 .navbar-brand {
@@ -20,11 +17,6 @@
 body { 
   padding-top: 70px;
   background: url('/images/background_sheep.png');
-}
-@media screen and (max-width: 768px) {
-    body { 
-      padding-top: 0px; 
-    }
 }
 
 /*FOOTER*/
